# mesh2vec

./: .buildinfo  .gitignore  .tool-versions  Makefile  README.md  api.html  customize_ansa_script.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.doctrees/: api.doctree  customize_ansa_script.doctree  environment.pickle  index.doctree
.doctrees/generated_examples/: aggregate_categorical.doctree  index.doctree  plot_neighbor_distances.doctree  plot_stress.doctree  quickstart.doctree  sg_execution_times.doctree
.github/actions/ci-setup/: action.yml
.github/workflows/: ci.yml  codeql.yml  workflow.yml
_downloads/1b3cae16a582a536acbe991d21ff11a7/: plot_neighbor_distances.py
_downloads/272b3b7294d09935ec9b08dfdd8575c5/: quickstart.ipynb
_downloads/5b6e149903a4c7472e9912d267211752/: aggregate_categorical.py
_downloads/5d44b8d6c987370083e3974f343fb10b/: plot_neighbor_distances.ipynb
_downloads/686ad8e3b409c447ed4395add49d72fb/: aggregate_categorical.ipynb
_downloads/7178e84d17dd02ce03f0182695da74c1/: quickstart.py
_downloads/81c2b163f7a56615d04ea355e5b9d283/: aggregate_warpage.ipynb
_downloads/90c18ed645fba54090d942e82993e650/: plot_stress.ipynb
_downloads/cee206cd923f0dfbae5ff8d073bd141d/: plot_stress.py
_sources/: api.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/generated_examples/: aggregate_categorical.rst.txt  aggregate_warpage.rst.txt  index.rst.txt  plot_neighbor_distances.rst.txt  plot_stress.rst.txt  quickstart.rst.txt  sg_execution_times.rst.txt
data/: hyper_02.txt  hyper_02_features.csv  hyper_02_features_noheader.csv
data/hat/: HAT.binout0000  HAT.d3plot  Hatprofile.k  Hatprofile.k.ansa  cached_hat_key.json  cached_hat_key_partid.json
docs/examples/: README.rst  aggregate_categorical.py  aggregate_warpage.py  plot_neighbor_distances.py  plot_stress.py  quickstart.py
docs/source/: api.rst  conf.py  customize_ansa_script.rst  index.rst  sg_execution_times.rst
docs/source/_templates/: class.rst  module.rst
generated_examples/: aggregate_categorical.html  aggregate_warpage.html  index.html  plot_neighbor_distances.html  plot_stress.html  quickstart.html  sg_execution_times.html
mesh2vec/: helpers.py  mesh2vec_base.py  mesh2vec_cae.py  mesh2vec_exceptions.py  mesh_features.py  test.py
mesh2vec/templates/: ansa.py
scripts/: discover_bottlenecks.ipynb  evaluation_1.0.3.py  evaluation_1.0.4_cand.py  evaluation_1x0x3.py  gemerate_test_data.py  generate_test_data.py  inspect_bottleneck.ipynb  plot_execution_time.ipynb  profile_stats.txt
tests/: test_mesh2vec_base.py  test_mesh2vec_cae.py  test_mesh_features.py
