[tool.poetry]
name = "mesh2vec"
version = "0.0.2"
authors = ["Renumics GmbH <info@renumics.com>"]
packages = [
    { include = "mesh2vec" }
]
readme = "README.md"
description = "mesh2vec"

[tool.poetry.dependencies]
python = ">=3.9, <3.15"
scipy = "^1.9.1"
pandas = "^2.0.0"
trimesh = "^3.14.1"
pyglet = "^1.5.26"
lasso-python = "^2.0.3"
networkx = "^2.8.6"
loguru = "^0.7.0"
notebook = "^7.0.0"
plotly = "^5.11.0"
joblib = "^1.2.0"
pillow = "^11.0.0"
cleo = "^2.0.1"
werkzeug = "^3.0.3"
ipython = "^8.10.0"
numba = "^0.60.0"
igraph = "^0.11.3"
jupyter-server = "^2.11.2"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
sphinx = "^5.1.1"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"
sphinx-gallery = "^0.11.1"
pylint = "^3.3.9"
mypy = "^1.18.2"
check-wheel-contents = "^0.6.0"
pip-audit = "^2.8.0"
pytest = "^8.4.2"
black = "^25.9.0"
matplotlib = "^3.9.0"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

[tool.black]
line-length = 98

[tool.pylint.format]
max-line-length = 98
good-names = "f,i,j,k,x,y,z,w,up,ex,db,df,v1,v2,e,v,hg,N"

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 4

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.2.2", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"