[tool.poetry]
name = "mesh2vec"
version = "0.0.2"
authors = ["Renumics GmbH <info@renumics.com>"]
packages = [
    { include = "mesh2vec" }
]
readme = "README.md"
description = "mesh2vec"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.15.0"
pandas = "^2.3.0"
trimesh = "^4.6.0"
lasso-python = "^2.0.4"
networkx = "^3.5.0"
loguru = "^0.7.0"
plotly = "^5.24.0"
joblib = "^1.5.0"
numpy = "^2.2.2"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.0"
sphinx-autobuild = "^2025.8.25"
sphinx-rtd-theme = "^3.0.0"
sphinx-gallery = "^0.19.0"
pylint = "^4.0.0"
mypy = "^1.18.2"
check-wheel-contents = "^0.6.3"
pip-audit = "^2.9.0"
pytest = "^8.4.2"
black = "^25.9.0"
matplotlib = "^3.10.1"
ipython = "^9.0.0"
notebook = "^7.4.7"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

[tool.black]
line-length = 98

[tool.pylint.format]
max-line-length = 98
good-names = "f,i,j,k,x,y,z,w,up,ex,db,df,v1,v2,e,v,hg,N"

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 4

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.2.2", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"