[project]
name = "mesh2vec"
description = "Aggregate feature vectors on CAE meshes."
authors = [
    {name = "Renumics GmbH",email = "info@renumics.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "scipy (>=1.15.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "trimesh (>=4.6.0,<5.0.0)",
    "lasso-python (>=2.0.4,<3.0.0)",
    "networkx (>=3.5.0,<4.0.0)",
    "loguru (>=0.7.0,<1.0.0)",
    "plotly (>=5.24.0,<6.0.0)",
    "joblib (>=1.5.0,<2.0.0)",
    "numpy (>=2.2.2,<3.0.0)"
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "sphinx (>=8.2.0,<9.0.0)",
    "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
    "sphinx-rtd-theme (>=3.0.0,<4.0.0)",
    "sphinx-gallery (>=0.19.0,<1.0.0)",
    "pylint (>=4.0.0,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "check-wheel-contents (>=0.6.3,<1.0.0)",
    "pip-audit (>=2.9.0,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "ipython (>=9.0.0,<10.0.0)",
    "notebook (>=7.4.7,<8.0.0)"
]

[tool.poetry]
packages = [
    { include = "mesh2vec" }
]
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

[tool.black]
line-length = 98

[tool.pylint.format]
max-line-length = 98
good-names = "f,i,j,k,x,y,z,w,up,ex,db,df,v1,v2,e,v,hg,N"

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 4

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"